themes/dark/assets/css/style.css
/* ... */
.bottom-10 {
    margin-bottom: 10px;
}

.bottom-15 {
    margin-bottom: 15px;
}

.bottom-20 {
    margin-bottom: 20px;
}

.bottom-25 {
    margin-bottom: 25px;
}

.horizontal-scroll {
    overflow-x: auto;
}

@media (max-width: 767px) {
    .col-md-12 > .horizontal-scroll {
        margin: 0 -13px;
    }
}

/* sub-menu */

@media screen and (min-width: 0) and (max-width: 768px) {
    .full-width { display: none; }  /* show it on small screens */
    .mobile { display: block; }
    .mobile .ui-icon { display: inline-block; }

    .dropdown-menu-custom > li > a {
        padding: 15px 36px 15px 5px;
        border-bottom-style: solid;
        border-bottom-width: 1px;
    }

    .mobile > ul > li > a {
        padding-top: 15px;
        padding-bottom: 15px;
        padding-left: 8px;
    }

    .mobile .img-align {
        width: 25px;
        float: left;
    }
}

@media screen and (min-width: 769px) {
    .full-width { display: block; }  /* show it on small screens */
    .mobile { display: none; }
}

/* navbar padding, to make room for in-page scrollbars */
.padding-right-15 {
    padding-right: 15px !important;
}

.backlog-quality {
    color: rgb(255, 255, 255);
    background-color: rgb(55, 55, 55);
}

@media (max-width: 1700px) {
    #key-padding {
        margin-left: 0;
        margin-right: 5px;
    }
}

.triggerhighlight {
    cursor: default;
}

/* =======================================================================
 Scroll to top
========================================================================== */
.scroll-wrapper {
    position: fixed;
    opacity: 0;
    visibility: hidden;
    overflow: hidden;
    text-align: center;
    font-size: 20px;
    z-index: 50;
    background-color: #777;
    color: #eee;
    width: 50px;
    height: 48px;
    line-height: 48px;
    right: 30px;
    bottom: 30px;
    padding-top: 2px;
    border-radius: 10px;
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -ms-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
}

.scroll-top-wrapper:hover {
    background-color: #888;
}

.scroll-top-wrapper.show {
    visibility: visible;
    cursor: pointer;
    opacity: 1;
}

.scroll-top-wrapper i.fa {
    line-height: inherit;
}

/* CSS for Nav dropdown hover
.dropdown:hover .dropdown-menu {
    display: block;
}
*/

/* =======================================================================
 overflow buttons for scrolling left and right.
 For horizontal scrolling, without breaking the ui.
========================================================================== */

.scroll-wrapper.show {
    visibility: visible;
    cursor: pointer;
    opacity: 1;
}

.scroll-wrapper.left {
    position: fixed;
    right: 150px;
}

.scroll-wrapper.right {
    position: fixed;
    right: 90px;
}

